avance 47